chore: replace v1 to api from endpoint url
